Plantio Diário: remover referências a Talhão; Enter com delegação dinâmica; grid boletim aplicado

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,7 +36,7 @@
             <div class="login-box">
                 <h2>Controle de Insumos</h2>
                 <p style="opacity:0.8;margin-bottom:12px;">Acesse para liberar o software</p>
-                <div class="form-grid">
+                <div class="form-grid boletim-grid">
                     <div class="form-group">
                         <label for="login-user">Usuário</label>
                         <input type="text" id="login-user" placeholder="admin">
@@ -303,7 +303,7 @@
             </div>
             <div class="chart-card">
                 <h4 style="margin: 0 0 10px 0;">Lançar Estoque</h4>
-                <div class="form-grid">
+                <div class="form-grid boletim-grid">
                     <div class="form-group">
                         <label for="estoque-frente">Frente</label>
                         <select id="estoque-frente">
