--- a/frontend/index.html
+++ b/frontend/index.html
@@ -75,6 +75,7 @@
             <button class="tab active" data-tab="insumos-fazendas">🌱 Insumos</button>
             <button class="tab" data-tab="graficos">📈 Dashboard</button>
             <button class="tab" data-tab="estoque">📦 Estoque</button>
+            <button class="tab" data-tab="viagens-adubo">🚚 Viagens Adubo</button>
             <button class="tab" data-tab="plantio-dia">📅 Plantio</button>
         </div>
 
@@ -354,8 +355,201 @@
         </div>
     </div>
 
+    <!-- Tab Viagens de Adubo -->
+    <div class="tab-content" id="viagens-adubo">
+        <div class="charts">
+            <div class="chart-card">
+                <h4 style="margin: 0 0 10px 0;">Filtros de Viagens</h4>
+                <div class="filters">
+                    <div class="filter-group">
+                        <label for="viagens-data-filter">Data</label>
+                        <input type="date" id="viagens-data-filter">
+                    </div>
+                    <div class="filter-group">
+                        <label for="viagens-fazenda-filter">Fazenda</label>
+                        <input type="text" id="viagens-fazenda-filter" placeholder="Nome da fazenda">
+                    </div>
+                    <div class="filter-group">
+                        <label for="viagens-frente-filter">Frente</label>
+                        <input type="text" id="viagens-frente-filter" placeholder="Ex.: 4001">
+                    </div>
+                    <div class="filter-group">
+                        <label for="viagens-motorista-filter">Motorista</label>
+                        <input type="text" id="viagens-motorista-filter" placeholder="Nome do motorista">
+                    </div>
+                    <div class="filter-group">
+                        <label for="viagens-caminhao-filter">Caminhão</label>
+                        <input type="text" id="viagens-caminhao-filter" placeholder="Placa ou identificação">
+                    </div>
+                    <div class="filter-group">
+                        <label for="viagens-lacre-filter">Lacre</label>
+                        <input type="text" id="viagens-lacre-filter" placeholder="Lacre do bag">
+                    </div>
+                    <button id="apply-viagens-filters" class="btn btn-primary">🔍 Aplicar Filtros</button>
+                    <button id="reset-viagens-filters" class="btn btn-secondary">🔄 Limpar</button>
+                </div>
+            </div>
+
+            <div class="chart-card">
+                <h4 style="margin: 0 0 10px 0;">Cadastro de Viagem</h4>
+                <div class="form-grid boletim-grid">
+                    <div class="form-group">
+                        <label for="viagem-data">Data</label>
+                        <input type="date" id="viagem-data">
+                    </div>
+                    <div class="form-group">
+                        <label for="viagem-frente">Frente</label>
+                        <select id="viagem-frente">
+                            <option value="">Selecione</option>
+                            <option value="4001">4001</option>
+                            <option value="4002">4002</option>
+                            <option value="4009 Abençoada">4009 Abençoada</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="viagem-fazenda">Fazenda</label>
+                        <input type="text" id="viagem-fazenda" placeholder="Nome da fazenda">
+                    </div>
+                    <div class="form-group">
+                        <label for="viagem-origem">Origem</label>
+                        <input type="text" id="viagem-origem" placeholder="Ex.: Armazém A">
+                    </div>
+                    <div class="form-group">
+                        <label for="viagem-destino">Destino</label>
+                        <input type="text" id="viagem-destino" placeholder="Ex.: Talhão 1">
+                    </div>
+                    <div class="form-group">
+                        <label for="viagem-produto">Produto</label>
+                        <select id="viagem-produto">
+                            <option value="">Selecione</option>
+                            <option>BIOZYME</option>
+                            <option>04-30-10</option>
+                            <option>QUALITY</option>
+                            <option>AZOKOP</option>
+                            <option>SURVEY (FIPRONIL)</option>
+                            <option>OXIFERTIL</option>
+                            <option>LANEX 800 WG (REGENTE)</option>
+                            <option>COMET</option>
+                            <option>COMPOSTO</option>
+                            <option>10-49-00</option>
+                            <option>PEREGRINO</option>
+                            <option>NO-NEMA</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="viagem-quantidade-total">Quantidade Total</label>
+                        <input type="number" id="viagem-quantidade-total" step="0.001">
+                    </div>
+                    <div class="form-group">
+                        <label for="viagem-unidade">Unidade</label>
+                        <select id="viagem-unidade">
+                            <option value="">Selecione</option>
+                            <option value="t">t</option>
+                            <option value="kg">kg</option>
+                            <option value="L">L</option>
+                            <option value="sc">sc</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="viagem-caminhao">Caminhão</label>
+                        <input type="text" id="viagem-caminhao" placeholder="Placa / identificação">
+                    </div>
+                    <div class="form-group">
+                        <label for="viagem-carreta1">Carreta 1</label>
+                        <input type="text" id="viagem-carreta1" placeholder="Opcional">
+                    </div>
+                    <div class="form-group">
+                        <label for="viagem-carreta2">Carreta 2</label>
+                        <input type="text" id="viagem-carreta2" placeholder="Opcional">
+                    </div>
+                    <div class="form-group">
+                        <label for="viagem-motorista">Motorista</label>
+                        <input type="text" id="viagem-motorista">
+                    </div>
+                    <div class="form-group">
+                        <label for="viagem-documento-motorista">Doc. Motorista</label>
+                        <input type="text" id="viagem-documento-motorista" placeholder="CPF / CNH">
+                    </div>
+                    <div class="form-group">
+                        <label for="viagem-transportadora">Transportadora</label>
+                        <input type="text" id="viagem-transportadora">
+                    </div>
+                    <div class="form-group">
+                        <label for="viagem-observacoes">Observações</label>
+                        <input type="text" id="viagem-observacoes" placeholder="Opcional">
+                    </div>
+                </div>
+                <div style="margin-top:10px; display:flex; gap:10px;">
+                    <button id="viagem-save-btn" class="btn btn-primary">💾 Registrar Viagem</button>
+                </div>
+            </div>
+
+            <div class="chart-card">
+                <h4 style="margin: 0 0 10px 0;">Bags da Viagem</h4>
+                <div class="form-grid boletim-grid">
+                    <div class="form-group">
+                        <label for="bag-identificacao">Identificação</label>
+                        <input type="text" id="bag-identificacao" placeholder="Ex.: BAG 001">
+                    </div>
+                    <div class="form-group">
+                        <label for="bag-peso">Peso</label>
+                        <input type="number" id="bag-peso" step="0.001">
+                    </div>
+                    <div class="form-group">
+                        <label for="bag-lacre">Lacre</label>
+                        <input type="text" id="bag-lacre" placeholder="Lacre / selo">
+                    </div>
+                    <div class="form-group">
+                        <label for="bag-observacoes">Observações</label>
+                        <input type="text" id="bag-observacoes" placeholder="Opcional">
+                    </div>
+                </div>
+                <div style="margin-top:10px; display:flex; gap:10px;">
+                    <button id="bag-add-btn" class="btn btn-secondary">➕ Adicionar Bag</button>
+                </div>
+                <div class="table-container" style="margin-top:10px;">
+                    <table class="data-table">
+                        <thead>
+                            <tr>
+                                <th>Identificação</th>
+                                <th>Peso</th>
+                                <th>Lacre</th>
+                                <th>Observações</th>
+                                <th>Ações</th>
+                            </tr>
+                        </thead>
+                        <tbody id="bags-table-body"></tbody>
+                    </table>
+                </div>
+            </div>
+
+            <div class="table-container">
+                <table class="data-table" id="viagens-adubo-table">
+                    <thead>
+                        <tr>
+                            <th>Data</th>
+                            <th>Frente</th>
+                            <th>Fazenda</th>
+                            <th>Produto</th>
+                            <th>Quantidade</th>
+                            <th>Unidade</th>
+                            <th>Motorista</th>
+                            <th>Caminhão</th>
+                            <th>Ações</th>
+                        </tr>
+                    </thead>
+                    <tbody id="viagens-adubo-table-body">
+                        <tr>
+                            <td colspan="9" class="loading">📡 Carregando dados...</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+
     <!-- Tab Plantio Diário -->
-        <div class="tab-content" id="plantio-dia">
+    <div class="tab-content" id="plantio-dia">
         <div class="charts">
             <div class="chart-card">
                 <h4 style="margin: 0 0 10px 0;">1. Informações Gerais</h4>
