--- a/frontend/index.html
+++ b/frontend/index.html
@@ -448,6 +448,7 @@
                             <option value="kg">kg</option>
                             <option value="L">L</option>
                             <option value="sc">sc</option>
+                            <option value="bag">bag</option>
                         </select>
                     </div>
                     <div class="form-group">
@@ -544,6 +545,20 @@
                         </tr>
                     </tbody>
                 </table>
+            </div>
+        </div>
+    </div>
+
+    <div id="viagem-detail-modal" class="modal" style="display:none;">
+        <div class="modal-content" style="max-width: 700px;">
+            <div class="modal-header">
+                <h3 id="viagem-detail-title">Detalhes da Viagem</h3>
+                <button class="close-modal" id="viagem-detail-close">&times;</button>
+            </div>
+            <div class="modal-body" id="viagem-detail-body"></div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" id="viagem-detail-cancel">Fechar</button>
+                <button type="button" class="btn btn-primary" id="viagem-detail-print">🖨️ Imprimir</button>
             </div>
         </div>
     </div>
