Adiciona campo Código na aba Viagem de Adubo e preenchimento automático de Fazenda

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -507,6 +507,10 @@
                         </select>
                     </div>
                     <div class="form-group">
+                        <label for="viagem-codigo-fazenda">Código</label>
+                        <input type="number" id="viagem-codigo-fazenda" placeholder="Cód">
+                    </div>
+                    <div class="form-group">
                         <label for="viagem-fazenda">Fazenda</label>
                         <input type="text" id="viagem-fazenda" placeholder="Nome da fazenda">
                     </div>
