Transforma campo Fazenda do Plantio em select populado automaticamente

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -732,7 +732,9 @@
                     
                     <div class="form-group">
                         <label for="single-fazenda">Fazenda</label>
-                        <input type="text" id="single-fazenda">
+                        <select id="single-fazenda">
+                            <option value="">Selecione a Fazenda</option>
+                        </select>
                     </div>
                     <div class="form-group">
                         <label for="single-cod">Código</label>
